tests/spec/compile-pass/014_move_field_from_owned_local.zn
// category: compile-pass
// profile: freestanding
// purpose: fields can be moved out of owned local values without custom destroy blocks

module tests.pass.moveFieldFromOwnedLocal;

struct Packet {
    bytes: Array<U8>,
    checksum: U32,
}

fn intoBytes(move packet: Packet) -> Array<U8> {
    return move packet.bytes;
}
