tests/spec/compile-fail/023_move_field_from_read_self.zn
// category: compile-fail
// profile: freestanding
// purpose: fields cannot be moved out of read-only self

module tests.fail.moveFieldFromReadSelf;

struct Packet {
    bytes: Array<U8>,
}

impl Packet {
    fn bad(self) -> Array<U8> {
        return self.bytes; // expected-error: cannot move field from read-only self
    }
}
